bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
var fini : Boolean = false
^BDR:1: error: Missing closing brace `}' assumed here
var fini : Boolean = false
^BDR:1: error: expected class or object definition
var fini : Boolean = false
^BDR:2: error: expected class or object definition
while (estSurMessage())
^BDR:3: error: expected class or object definition
{if (litMessage() == "A") {
^