bdr.BDR.scala.code
var fini : Boolean = false
while (estSurMessage())
{if (litMessage() == "A") {
  avance();
} else if { if (litMessage() == "Z") {
  recule();} else if if (litMessage() == "B") {
  avance(3);}
